# MB-System

./: CMakeLists.txt
.github/workflows/: build.yml
build-utils/: FindGMT.cmake
src/bsio/: CMakeLists.txt  mbbs_defines.h
src/gsf/: CMakeLists.txt
src/mbaux/: CMakeLists.txt
src/mbio/: CMakeLists.txt
src/mbtrn/: CMakeLists.txt
src/mbtrn/r7kr/: CMakeLists.txt
src/mbtrnframe/: CMakeLists.txt
src/mbview/: CMakeLists.txt
src/qt-guilib/: CMakeLists.txt
src/surf/: CMakeLists.txt
